--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://gphofficial.github.io
+url: http://gphofficialcom.github.io
 baseurl: /
 title: Goh Puay Hiang
 author: Goh Puay Hiang
