--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ avatar: profile.jpeg
 email: gphofficial+public@gmail.com.NOSPAM
 #github: gphofficial # username
 twitter: gphofficial
-linkedin: gphofficial
+#linkedin: gphofficial
 stackoverflow: users/1016276/gphofficial   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
 #disqus: username
@@ -65,8 +65,8 @@ social:
     fallbackicon: /Trakt/pixels/trakt-icon-black.png
     url: https://trakt.tv/users/gphofficial/
   - title: Twitter
-    icon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnImage/Twitter_Logo_WhiteOnImage.svg
-    fallbackicon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnImage/Twitter_Logo_WhiteOnImage.png
+    icon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.svg
+    fallbackicon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.png
     url: https://twitter.com/GPHOfficial
 
 # needed for travis-ci build
