upgraded and cleanup nyan

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ links:
   - title: Projects
     url: /projects.html
   - title: Resume
-    url: http://jekyller.github.io/vitae
+    url: https://resume.gphofficial.com
     external: true
 
 social:
