--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ twitter: gphofficial
 google_analytics: UA-72214160-3
 
 links:
+  - title: Status
+    url: https://status.gphofficial.com/
+    external: true
   - title: Blog
     url: /blog/
   - title: Projects
