--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: https://gphofficialcom.github.io/
+url: https://gphofficial.com
 baseurl: /
 title: Goh Puay Hiang
 author: Goh Puay Hiang
