--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ safe: true
 # edit here to achieve your personal greatness
 url: https://gphofficial.com
 baseurl: /
-title: Goh Puay Hiang
+title: Goh Puay Hiang/@GPHOfficial
 author: Goh Puay Hiang
-description: Homepage
+description: Goh Puay Hiang/@GPHOfficial's Homepage
 avatar: profile.jpeg
 email: gphofficial+public@gmail.com.NOSPAM
 #github: gphofficial # username
