--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ links:
   - title: Projects
     url: /projects.html
   - title: Resume
-    url: https://resume.gphofficial.com
+    url: https://link.gphofficial.com/cv
     external: true
 
 social:
