--- a/_config.yml
+++ b/_config.yml
@@ -44,38 +44,38 @@ social:
     icon: /Facebook/Black/SVG/flogo-RGB-HEX-Blk-72.svg
     fallbackicon: /Facebook/Black/PNG/flogo-RGB-HEX-Blk-72.png
     url: https://www.facebook.com/Goh.Puay.Hiang
-  - title: GitHub
-    icon: /GitHub/Vector/Github-Mark-small.svg
-    fallbackicon: /GitHub/PNG/GitHub-Mark-64px.png
-    url: https://github.com/gphofficial
-  - title: Instagram
-    icon: /Instagram/glyph-logo_May2016.svg
-    fallbackicon: /Instagram/glyph-logo_May2016.png
-    url: https://www.instagram.com/gphofficial/
-  - title: LinkedIn
-    icon: /LinkedIn/LinkedIn%20%5Bin%5D/Print/Black/In-Black-0p75in-TM.svg
-    fallbackicon: /LinkedIn/LinkedIn%20%5Bin%5D/Screen/Black/In-Black-75px-TM.png
-    url: https://www.linkedin.com/in/gphofficial
-  - title: Spotify
-    icon: /Spotify/icons/01_RGB/01_EPS/Spotify_Icon_RGB_Black.svg 
-    fallbackicon: /Spotify/icons/01_RGB/02_PNG/Spotify_Icon_RGB_Black.png
-    url: https://open.spotify.com/user/gphofficial
-  - title: Telegram
-    icon: /Telegram/TelegramLogo2.svg
-    fallbackicon: /Telegram/Logo1.png
-    url: https://t.me/gphofficial
-  - title: Trakt
-    icon: /Trakt/vector/trakt-icon-black.svg
-    fallbackicon: /Trakt/pixels/trakt-icon-black.png
-    url: https://trakt.tv/users/gphofficial/
   - title: Twitter
     icon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.svg
     fallbackicon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.png
     url: https://twitter.com/GPHOfficial
-  - title: stackoverflow
-    icon: /Stackoverflow/SVG/so-icon.svg
-    fallbackicon: /Stackoverflow/PNG/so-icon.png
-    url: https://stackoverflow.com/users/1016276/gphofficial
+  - title: Instagram
+    icon: /Instagram/glyph-logo_May2016.svg
+    fallbackicon: /Instagram/glyph-logo_May2016.png
+    url: https://www.instagram.com/gphofficial/
+  - title: Telegram
+    icon: /Telegram/TelegramLogo2.svg
+    fallbackicon: /Telegram/Logo1.png
+    url: https://t.me/gphofficial
+  - title: GitHub
+    icon: /GitHub/Vector/Github-Mark-small.svg
+    fallbackicon: /GitHub/PNG/GitHub-Mark-64px.png
+    url: https://github.com/gphofficial
+  - title: LinkedIn
+    icon: /LinkedIn/LinkedIn%20%5Bin%5D/Print/Black/In-Black-0p75in-TM.svg
+    fallbackicon: /LinkedIn/LinkedIn%20%5Bin%5D/Screen/Black/In-Black-75px-TM.png
+    url: https://www.linkedin.com/in/gphofficial
+#   - title: Spotify
+#     icon: /Spotify/icons/01_RGB/01_EPS/Spotify_Icon_RGB_Black.svg 
+#     fallbackicon: /Spotify/icons/01_RGB/02_PNG/Spotify_Icon_RGB_Black.png
+#     url: https://open.spotify.com/user/gphofficial
+#   - title: Trakt
+#     icon: /Trakt/vector/trakt-icon-black.svg
+#     fallbackicon: /Trakt/pixels/trakt-icon-black.png
+#     url: https://trakt.tv/users/gphofficial/
+#   - title: stackoverflow
+#     icon: /Stackoverflow/SVG/so-icon.svg
+#     fallbackicon: /Stackoverflow/PNG/so-icon.png
+#     url: https://stackoverflow.com/users/1016276/gphofficial
 
 # needed for travis-ci build
 exclude: [vendor]
