--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ safe: true
 # edit here to achieve your personal greatness
 url: https://gphofficial.com
 baseurl: /
-title: Goh Puay Hiang/@GPHOfficial
+title: Goh Puay Hiang
 author: Goh Puay Hiang
 description: Goh Puay Hiang/@GPHOfficial's Homepage
 avatar: profile.jpeg
@@ -47,15 +47,15 @@ social:
   - title: Twitter
     icon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.svg
     fallbackicon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.png
-    url: https://twitter.com/GPHOfficial
+    url: https://twitter.com/puayhiang_goh
   - title: Instagram
     icon: /Instagram/glyph-logo_May2016.svg
     fallbackicon: /Instagram/glyph-logo_May2016.png
-    url: https://www.instagram.com/gphofficial/
-  - title: Telegram
-    icon: /Telegram/TelegramLogo2.svg
-    fallbackicon: /Telegram/Logo1.png
-    url: https://t.me/gphofficial
+    url: https://www.instagram.com/puayhiang.goh/
+#   - title: Telegram
+#     icon: /Telegram/TelegramLogo2.svg
+#     fallbackicon: /Telegram/Logo1.png
+#     url: https://t.me/gphofficial
   - title: GitHub
     icon: /GitHub/Vector/Github-Mark-small.svg
     fallbackicon: /GitHub/PNG/GitHub-Mark-64px.png
@@ -63,7 +63,7 @@ social:
   - title: LinkedIn
     icon: /LinkedIn/LinkedIn%20%5Bin%5D/Print/Black/In-Black-0p75in-TM.svg
     fallbackicon: /LinkedIn/LinkedIn%20%5Bin%5D/Screen/Black/In-Black-75px-TM.png
-    url: https://www.linkedin.com/in/gphofficial
+    url: https://www.linkedin.com/in/puayhiang
 #   - title: Spotify
 #     icon: /Spotify/icons/01_RGB/01_EPS/Spotify_Icon_RGB_Black.svg 
 #     fallbackicon: /Spotify/icons/01_RGB/02_PNG/Spotify_Icon_RGB_Black.png
