--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url: https://gphofficial.com
 baseurl: /
 title: Goh Puay Hiang
 author: Goh Puay Hiang
-description: Goh Puay Hiang/@GPHOfficial's Homepage
+description: Puay Hiang's Homepage
 avatar: profile.jpeg
 email: gphofficial+public@gmail.com.NOSPAM
 #github: gphofficial # username
