--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
   - title: Facebook
     icon: /Facebook/Black/SVG/flogo-RGB-HEX-Blk-72.svg
     fallbackicon: /Facebook/Black/PNG/flogo-RGB-HEX-Blk-72.png
-    url: https://www.facebook.com/Goh.Puay.Hiang
+    url: https://www.facebook.com/puayhiang.goh
   - title: Twitter
     icon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.svg
     fallbackicon: /Twitter/Twitter%20Logos/Twitter_Logo_WhiteOnBlue/Twitter_Logo_WhiteOnBlue.png
