--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ safe: true
 url: https://gphofficial.com
 baseurl: /
 title: Goh Puay Hiang
-author: Goh Puay Hiang
+author: Puay Hiang
 description: Puay Hiang's Homepage
 avatar: profile.jpeg
 email: gphofficial+public@gmail.com
